--- a/Tracko/wwwroot/index.html
+++ b/Tracko/wwwroot/index.html
@@ -31,6 +31,8 @@
     <a class="reload" href=".">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+<script src="js/custom-functions.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
 <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
 <script>navigator.serviceWorker.register('service-worker.js', {updateViaCache: 'none'});</script>
